monitoring/k8s-prometheus/prometheus-deployment.yaml
# Deployment prometheus server
apiVersion: apps/v1
kind: Deployment
# name-space and labels 
metadata:
  name: prometheus-deployment
  namespace: monitoring
  labels:
    app: prometheus-server
# cluser spec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      # image containers with args 
      containers:
        - name: prometheus
          image: prom/prometheus
          #  binding the files and save them on the storage container location. 
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          # the binding mount point
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      # Storage volume 
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
  
        - name: prometheus-storage-volume
          emptyDir: {}
